[project]
name = "gllogger"
version = "0.0.2"
authors = [
    { name = "calm51", email = "calm51@protonmail.com" },
]
description = "gllogger"
readme = ""
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/calm51/gllogger"
Issues = "https://github.com/calm51/gllogger/issues"